--- a/public/ITC-505/lab-7/index.html
+++ b/public/ITC-505/lab-7/index.html
@@ -18,7 +18,7 @@
         /* Header Styling */
         h1 {
             text-align: center;
-            color: #0cb7ae;
+            color: #e47398;
             font-size: 2.5em;
             margin-top: 20px;
             text-transform: uppercase;
@@ -60,16 +60,16 @@
         }
 
         form input[type="text"]:focus {
-            border-color: #0cb7ae;
+            border-color: #e47398;
             outline: none;
-            box-shadow: 0 0 5px rgba(12, 183, 174, 0.5);
+            box-shadow: 0 0 5px rgba(228, 115, 152, 0.5);
         }
 
         form button {
             display: block;
             width: 100%;
             padding: 12px;
-            background: linear-gradient(45deg, #0cb7ae, #1789b5);
+            background: linear-gradient(45deg, #e47398, #a53aa3);
             color: white;
             border: none;
             border-radius: 6px;
@@ -80,7 +80,7 @@
         }
 
         form button:hover {
-            background: linear-gradient(45deg, #1789b5, #0cb7ae);
+            background: linear-gradient(45deg, #a53aa3, #e47398);
             transform: scale(1.02);
         }
 
@@ -89,7 +89,7 @@
             text-align: center;
             margin-top: 50px;
             padding: 15px;
-            background: #0cb7ae;
+            background: #e47398;
             color: white;
             font-size: 1em;
         }
@@ -119,7 +119,7 @@
             display: inline-block;
             margin-top: 20px;
             text-decoration: none;
-            color: #0cb7ae;
+            color: #007bff;
             font-weight: bold;
             font-size: 1.1em;
             transition: color 0.3s ease-in-out;
@@ -127,7 +127,7 @@
 
         a:hover {
             text-decoration: underline;
-            color: #1789b5;
+            color: #a53aa3;
         }
     </style>
 </head>
@@ -156,8 +156,8 @@
         <p>Last updated: <span id="lastModified"></span></p>
         <div class="addendum">
             <p>
-                Welcome to the Mad Lib Form! This interactive tool is designed to let users create fun, personalized stories
-                by filling in different types of words. Here’s a breakdown of its elements:
+                Welcome to the Mad Lib Form! This interactive tool allows users to fill in the blanks with different types
+                of words to create a fun and personalized story. Here’s what each input means:
             </p>
             <ul>
                 <li><strong>Noun:</strong> Represents a person, place, or thing (e.g., "dog," "city").</li>
